tests/valid/binary_operators/parens.rs
/*
return: 14
*/
main(): i32 {
    return 2 * (3 + 4);
}