tests/invalid/loops/do_no_semicolon.rs
/*
fail: 1
*/

main(): i32 {
    do
        3;
    while (4)
}